# mcp-servers

./: README.md  README.md_orig  docker-compose.yml  env
mcp-calc/: Dockerfile  README.md  pyproject.toml  server.py
mcp-context7/: Dockerfile  docker-compose.yml
mcp-date-time/: Dockerfile  README.md  pyproject.toml  server.py
mcp-fetch/: Dockerfile  docker-compose.yml  pyproject.toml  server.py
mcp-search/: docker-compose.yml
mcp-yandex-search/: Dockerfile  docker-compose.yml  pyproject.toml  server.py
